[tool.poetry]
name = "samoyed"
version = "0.1.0"
description = "Idiomatic AWS lambda utility easpacially for SAM"
authors = ["Seonghyeon Kim <self@seonghyeon.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
ujson = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
